# mirage synthetic-defect ENGINE — runs in its OWN env (Isaac Sim bundles a kit runtime that can't
# co-resolve with the perception .venv's cu130/py3.12 torch). This is the standard sim split: the
# engine renders labeled scenes here; surfscan/data/synth.py (perception env) adapts the output into
# the common store. Build:  cd sim && uv sync   (then OMNI_KIT_ACCEPT_EULA=YES uv run python ...)
[project]
name = "surfscan-sim"
version = "0.1.0"
description = "mirage synthetic-defect engine — Isaac Sim / Replicator scene-gen producing the labeled task-graph (rgb/depth/normals/seg/anomaly) that feeds the perception pipeline via the common store."
requires-python = "==3.12.*"          # isaacsim 6.0 ships cp312 wheels (5.1 was cp311)
dependencies = [
    "isaacsim[all,extscache]==6.0.1.0",
    "tifffile",                          # MVTec-format xyz position-map export (matches the real scans)
    "jaxtyping",                         # shape annotations on core.rollout / control — imported by the Isaac gap runner
]

# NVIDIA's index hosts isaacsim + all its isaacsim-* / omni-* subpackages.
[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"

[tool.uv]
# isaacsim 6.0's deps span both indexes (e.g. isaacsim-core needs mujoco-usd-converter==0.2.0, which
# is on pypi.org not the nvidia index). Let uv pick the best version across indexes, not first-only.
index-strategy = "unsafe-best-match"
# isaacsim-core pins pre-release deps (e.g. tinyobjloader==2.0.0rc13). Allow them.
prerelease = "allow"

[dependency-groups]
dev = ["pytest"]                         # pure twin_geom unit tests; boot smoke is opt-in (SIM_ISAAC_BOOT=1)

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]                       # twin_geom / twin_obj import as top-level modules (script dir)
